# tirc

./: .luarc.json  CLAUDE.md  CODE_REVIEW.md  Cargo.toml  TODO.md  stylua.toml
.github/: dependabot.yml
.github/workflows/: rust.yml
dev/matrix/: README.md  docker-compose.yml  register.sh
dev/mattermost/: README.md  docker-compose.yml  setup.sh
lua/tirc/: class.lua  config.lua  init.lua  utils.lua
lua/tirc/tui/: default_theme.lua  theme.lua
lua/tirc/tui/themes/: default.lua  slanted.lua
src/: lib.rs  main.rs
src/backends/: irc.rs  matrix.rs  mattermost.rs  mod.rs
src/config/: mod.rs
src/core/: mod.rs
src/lua/: date_time.rs  mod.rs
src/tui/: lua.rs  mod.rs  renderer.rs  terminal.rs  ui.rs  wrap.rs
src/tui/lua/: default_theme.lua
src/ui/: input.rs  message.rs  mod.rs  state.rs
