[package]
name = "tirc"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3"
irc = { version = "1.1", default-features = false, features = [
  "ctcp",
  "tls-native",
  "channel-lists",
] }
tokio = { version = "1.52", features = ["full"] }
crossterm = { version = "0.29", features = ["serde"] }
ratatui = { version = "0.30", features = [
  "crossterm_0_29",
  "serde",
] }
tui-input = { version = "0.15", features = ["crossterm"] }
anyhow = "1.0"
mlua = { version = "0.11", features = ["luajit52", "async", "serialize", "send"] }
xdg = "3.0"
serde = "1.0"
indoc = "2.0"
indexmap = "2.14"
semver = { version = "1.0", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
textwrap = "0.16"
itertools = "0.15"
unicode-width = "0.2"
num_cpus = "1.17"
